[package]
name = "stockrustilizer"
version = "0.1.0"
authors = ["Kemper Mahanes <kemper.mahanes@gmail.com>"]
edition = "2021"

[lib]
name = "stock_lib"
path = "src/stock_lib.rs"
doctest = false

[[example]]
name = "example_data_pull"
path = "examples/read_data.rs"

[[bin]]
name = "stockrustilizer"
path = "src/bin/main.rs"

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.6.3"
ta = "0.5.0"
tokio = { version = "1.11", features = ["full"] }
yahoo_finance_api = "1.0"
